Added cat image

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1> Hi. I'm Haikal </h1>
-<p>I'm a medical student</p>
-<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1> Hi. I'm Haikal </h1>
+	<p>I'm a <b>medical student</b></p>
+	<p>I'm a <br> 
+	second year</p>
+	<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a link!</a>
+	<img src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png">
+</body>
+</html>
