--- a/test.html
+++ b/test.html
@@ -5,10 +5,11 @@
 </head>
 <body>
 	<h1> Hi. I'm Haikal </h1>
-	<p>I'm a <b>medical student</b></p>
+	<p>I'm a <b>medical student. Look at me</b></p>
 	<p>I'm a <br> 
 	second year</p>
 	<a href="https://google.com" target="_blank" title="Let's go to google">Click me! I'm a link!</a>
 	<img src="https://icatcare.org/app/uploads/2018/07/Thinking-of-getting-a-cat.png">
+	<p>What's us friends</p>
 </body>
 </html>
